--- a/css/screens/more-menu.css
+++ b/css/screens/more-menu.css
@@ -7,6 +7,14 @@
     margin-top: 25px;
 }
 
+.menu--find{
+    padding: 0px;
+}
+
+.menu--find .menu__row__item i{
+    margin-bottom: 20px;
+}
+
 .menu__row{
     display: flex;
     width: 100%;
