--- a/css/screens/notification.css
+++ b/css/screens/notification.css
@@ -25,7 +25,7 @@
 }
 
 .notification__setting{
-    position: fixed;
+    position: absolute;
     font-size: 13px;
     text-align: center;
     margin-left: 72px;
